--- a/src/components/ProjectContainer/ProjectContainer.scss
+++ b/src/components/ProjectContainer/ProjectContainer.scss
@@ -89,6 +89,7 @@
                 height: max-content;
                 padding: 20px;
                 width: 115%;
+                z-index: 10;
              
                 p{
                     color: #c8c8c8;
